syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.usatiuk.dhfs.persistence";
option java_outer_classname = "DhfsObjectPersistence";

package dhfs.persistence;

message JObjectKeyP {
  string name = 1;
}

message PeerIdP {
  JObjectKeyP id = 1;
}

message ObjectChangelog {
  message entries_Entry {
    PeerIdP key = 1;
    int64 value = 2;
  }
  repeated entries_Entry entries = 1;
}

// TODO: Serialization
message FileDtoP {
  bytes serializedData = 1;
}

message ChunkDataP {
  JObjectKeyP key = 1;
  bytes data = 2;
}

message PeerInfoP {
  bytes serializedData = 1;
}

message JDataRemoteDtoP {
  oneof obj {
    FileDtoP fileDto = 1;
    ChunkDataP chunkData = 2;
    PeerInfoP peerInfo = 3;
  }
}

message JDataP {
  bytes serializedData = 1;
}